--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "next": "13.4.6",
+    "prisma": "^4.16.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.63.4",
     "typescript": "5.1.3"
   }
 }
