--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "axios": "^1.4.0",
+    "debug": "^4.3.4",
     "next": "13.4.6",
     "prisma": "^4.16.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.63.4",
+    "supports-color": "^9.3.1",
     "typescript": "5.1.3"
   }
 }
