--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "axios": "^1.4.0",
     "debug": "^4.3.4",
     "next": "13.4.6",
+    "phosphor-react": "^1.4.1",
     "prisma": "^4.16.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.63.4",
-    "supports-color": "^9.3.1",
+    "supports-color": "^8.1.1",
     "typescript": "5.1.3"
   }
 }
