--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "@types/react-modal": "^3.16.0",
     "axios": "^1.4.0",
     "debug": "^4.3.4",
     "next": "13.4.6",
@@ -20,6 +21,7 @@
     "prisma": "^4.16.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "sass": "^1.63.4",
     "supports-color": "^8.1.1",
     "typescript": "5.1.3"
