--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "task",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@prisma/client": "^4.16.0",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
-    "@types/react-modal": "^3.16.0",
-    "axios": "^1.4.0",
-    "debug": "^4.3.4",
-    "next": "13.4.6",
-    "phosphor-react": "^1.4.1",
-    "prisma": "^4.16.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-modal": "^3.16.1",
-    "sass": "^1.63.4",
-    "supports-color": "^8.1.1",
-    "typescript": "5.1.3"
-  }
+    "name": "task",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "prisma generate && next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@prisma/client": "^4.16.0",
+        "@types/node": "20.3.1",
+        "@types/react": "18.2.13",
+        "@types/react-dom": "18.2.6",
+        "@types/react-modal": "^3.16.0",
+        "axios": "^1.4.0",
+        "debug": "^4.3.4",
+        "next": "13.4.6",
+        "phosphor-react": "^1.4.1",
+        "prisma": "^4.16.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-modal": "^3.16.1",
+        "sass": "^1.63.4",
+        "supports-color": "^8.1.1",
+        "typescript": "5.1.3"
+    }
 }
